test(java/path_traversal): use Files.write(byte[]) and Paths.get to match analyzer sinks/sources
The Java path-traversal analyzer added in 5.1.90 keys its sink and source
recognition off concrete API names. The two fixtures used a couple of
overloads that the analyzer's regex/AST patterns don't match, so the
"buggy" fixture wasn't tripping the detector and the "clean" fixture
relied on a sanitizer the analyzer didn't model.

path_traversal_buggy.java:
- Switch the upload write from `Files.writeString(target, "avatar")`
  to `Files.write(target, "avatar".getBytes(StandardCharsets.UTF_8))`.
  `Files.writeString` is a separate overload that the analyzer's sink
  list does not yet include; `Files.write(Path, byte[])` is the
  canonical write sink it recognizes. Using the byte form ensures the
  fixture actually exercises the "request filename -> Files.write"
  path the buggy fixture is meant to demonstrate.
- Add the matching `import java.nio.charset.StandardCharsets;` so the
  byte conversion compiles cleanly.

path_traversal_clean.java:
- Switch from `Path.of(avatar.getSubmittedFileName()).getFileName()` to
  `Paths.get(avatar.getSubmittedFileName()).getFileName()`. Both are
  semantically identical (both return a `Path`), but the analyzer's
  source/wrap recognition models `Paths.get(...)` explicitly. Using
  `Paths.get` makes the fixture verify that the path-from-request
  sanitization chain is recognized end-to-end.
- Mirror the buggy fixture's switch to `Files.write(path, byte[])` for
  parity, with the matching `StandardCharsets` import. The clean
  fixture continues to apply `.getFileName()` containment before the
  sink, so the analyzer must still report no findings on this file.
- Add `import java.nio.file.Paths;` to support the API change.

Functionally identical inputs/outputs at the JVM level — both fixtures
still write the same bytes to the same paths — but now the analyzer's
heuristics fire and don't fire on the cases they're meant to.

Co-Authored-By: Cl